Fix deprecated stuff, redesign help messages